--- a/index.html
+++ b/index.html
@@ -19,53 +19,69 @@
         New York Times Search
       </a>
     </nav>
-    <div class="container col-10 m-3">
-      <form>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Search Term</label>
-          <input
-            type="search-word"
-            class="form-control"
-            id="search-term"
-            placeholder=""
-          />
-        </div>
-        <div class="form-group">
-          <label for="numberOfRecord">Numbers of Records to Retrieve</label>
-          <select class="form-control" id="numberOfRecord">
-            <option>1</option>
-            <option>5</option>
-            <option>10</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Start Year(Optional)</label>
-          <input
-            type="year"
-            class="form-control"
-            id="startYear"
-            placeholder=""
-          />
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">End Year(Optional)</label>
-          <input type="year" class="form-control" id="endYear" placeholder="" />
-        </div>
-        <button id="search" type="search" class="btn btn-primary">
-          Search
-        </button>
-        <button id="clear" type="clear" class="btn btn-primary">
-          Clear Results
-        </button>
-      </form>
-    </div>
     <div class="container">
-      <div id="article-header"></div>
-      <div id="articles-display" class="media">
-        <ul class="list-unstyled" id="articles"></ul>
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="container col-10 m-3">
+          <form>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Search Term</label>
+              <input
+                type="search-word"
+                class="form-control"
+                id="search-term"
+                placeholder=""
+              />
+            </div>
+            <div class="form-group">
+              <label for="numberOfRecord">Numbers of Records to Retrieve</label>
+              <select class="form-control" id="numberOfRecord">
+                <option>1</option>
+                <option>5</option>
+                <option>10</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Start Year(Optional)</label>
+              <input
+                type="year"
+                class="form-control"
+                id="startYear"
+                placeholder=""
+              />
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">End Year(Optional)</label>
+              <input
+                type="year"
+                class="form-control"
+                id="endYear"
+                placeholder=""
+              />
+            </div>
+            <button id="search" type="search" class="btn btn-primary">
+              Search
+            </button>
+            <button id="clear" type="clear" class="btn btn-primary">
+              Clear Results
+            </button>
+          </form>
+          <div class="col-1"></div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col-10" id="article-header"></div>
+          <div id="articles-display" class="media">
+            <ul class="list-unstyled" id="articles"></ul>
+          </div>
+          <div class="col-1"></div>
+        </div>
       </div>
     </div>
+    <div class="col-1"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
